# tk_2420

./: .gitignore  README.md  package.json  prod-front-docker-compose.yml  pyproject.toml  run_server.sh
.github/workflows/: front-docker-publish.yml  py-test.yml  ts-test.yml
TS/oshinoko/: .dockerignore  .env.development  .env.production  .eslintrc.json  Dockerfile  README.md  jest.config.js  next.config.ts  package.json  pnpm-lock.yaml
TS/oshinoko/app/: layout.tsx  page.tsx
TS/oshinoko/app/annotation/: page.tsx
TS/oshinoko/app/hooks/: useBoundingBoxManager.ts
TS/oshinoko/app/lib/: categories.ts  categoriies.ts  config.ts  constsnts.ts  snapshotUtils.test.ts  snapshotUtils.ts  types.ts  yoloUtils.test.ts  yoloUtils.ts
TS/oshinoko/app/recommendation/: page.tsx
TS/oshinoko/app/ui/: AnnotationStudio.tsx  AnnotationTools.tsx  BoundingBoxDrawer.tsx  EnhancedVideoPlayer.tsx  Header.tsx  LabelSelectionPopup.tsx  ListOshiImages.tsx  ModelTraining.tsx  (+8 more)
hackday/: package-lock.json  run_server.sh  server.js
hackday/models/: README.md
hackday/project2/: app.py
hackday/project2/static/: main.js  style.css
hackday/public/: index.html  index2.html  whisplash.png:Zone.Identifier
hackday/src/: movie_detector.py  train_yolo.ipynb  yolo_tracker.py
project2/: app.py
project2/static/: index.html  main.js  style.css
public/: index.html
py/: README.md  app.py  env.py  models.py  movie_detector copy.py  movie_detector.py  seed_db.py  setup_pythonpath.sh
py/app/: app.py
py/app/services/: movie_detector.py
py/config/: settings.py
py/overlays/: Whiplash_overlay.json  Whiplash_short.json
py/processed_data/kpop_idol_faces_embeddings/: idol_features.json
py/processed_data/overlays/: Supernova_overlay.json  Whiplash_overlay.json
py/propose_similar_kpop_idle/: make_kpop_idle_embedding.py  propose_similar_kpop_idle_.py  propose_similar_kpop_idol.py
py/propose_similar_kpop_idle/AdaFace/: __init__.py  config.py  convert.py  data.py  evaluate_utils.py  head.py  inference.py  main.py  net.py  train_val.py  utils.py
py/src/: app.py  models.py  seed_db.py
py/src/routes/: __init__.py  annotations.py  idol_suggestion.py  member_profile.py  ml_models.py  models.py  oshi_images.py  oshi_photos.py  overlays.py  videos.py
py/train/: README.md  incremental_learning.py  validation.py
src/: face_recognition_and_track.py  movie_detector.py  train_yolo.ipynb  yolo_tracker.py
(+63 files in other folders)
