[project]
name = "tk-2420"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "jupyter>=1.1.1",
    "lapx>=0.5.11",
    "opencv-python>=4.10.0.84",
    "ultralytics>=8.3.23",
]
