[project]
name = "tk-2420"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-cors>=5.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.0.3",
    "jupyter>=1.1.1",
    "lapx>=0.5.11",
    "opencv-python>=4.10.0.84",
    "ultralytics>=8.3.23",
    "pytorch-lightning==1.8.6",
    "torch<=1.13.1",
    "bcolz-zipline",
    "prettytable",
    "menpo",
    "opencv-python",
    "net>=2.4",
    "ruff>=0.7.3",
]

[tool.mypy]
check_untyped_defs = false
ignore_missing_imports = true
python_version = '3.10'
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "__pypackages__",
  "__pycache__",
  "venv",
  "hackday",
  "py/src/services/propose_similar_kpop_idol/AdaFace"
]
line-length = 120
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["I", "B", "F", "E"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
]
